Header: fix nav link alignment

--- a/src/views/header.scss
+++ b/src/views/header.scss
@@ -44,6 +44,7 @@ header {
 
     a {
       @extend %uppercase;
+      display: block;
       color: $white;
       text-decoration: none;
 
